# smart_dental_c

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-11-smart-dental-handpiece.md
docs/superpowers/specs/: 2026-05-11-smart-dental-design.md
qml/: Dashboard.qml  main.qml  qml.qrc
src/: DatabaseManager.cpp  DatabaseManager.h  HardwareHandler.cpp  HardwareHandler.h  StateManager.cpp  StateManager.h  TelemetryBridge.cpp  TelemetryBridge.h  main.cpp
tests/: CMakeLists.txt  tst_HardwareHandler.cpp  tst_StateManager.cpp
